[kfileitemactions] Show desktop file actions more prominently

For desktop files we currently show two kinds of actions in the "Actions" submenu: The actions defined by the desktop file itself and the externally provided file actions

However, the two are conceptually different things. The latter operate on the desktop file itself, the former does not

The former are also much more relevant in a folderview context

This patch moves the desktop file's own actions out of the menu and up next to the "Open with" actions

It also fixes executing those actions by not passing the file url as an argument

BUG: 417012